# RyansDB

./: CMakeLists.txt  README.md
src/: main.cpp
src/Compiler/: Compiler.cpp  Compiler.hpp
src/Compiler/LexycalAnalyser/: LexycalAnalyzer.cpp  LexycalAnalyzer.hpp
src/Compiler/LexycalAnalyzer/: LexycalAnalyzer.cpp  LexycalAnalyzer.hpp
src/Compiler/SemanticAnalyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
src/Compiler/SymbolTable/: SymbolTable.cpp  SymbolTable.hpp
src/Compiler/SymbolTable/ParserTree/: ParserTree.cpp  ParserTree.hpp  ParserTreeNode.cpp  ParserTreeNode.hpp
src/Compiler/SymbolTable/ParserTree/Builder/: ParserTreeBuilder.cpp  ParserTreeBuilder.hpp
src/Compiler/SymbolTable/TokenDefinition/: TokenDefinition.cpp  TokenDefinition.hpp
src/Compiler/SyntaxAnalyzer/: SyntaxAnalyzer.cpp  SyntaxAnalyzer.hpp
src/Compiler/SyntaxAnalyzer/Parsers/AlterTableParser/: AlterTableParser.cpp  AlterTableParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/Base/: CommandParser.hpp  SyntaxParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/CreateDatabaseParser/: CreateDatabaseParser.cpp  CreateDatabaseParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/CreateTableParser/: CreateTableParser.cpp  CreateTableParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/DeleteParser/: DeleteParser.cpp  DeleteParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/DropDatabaseParser/: DropDatabaseParser.cpp  DropDatabaseParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/DropTableParser/: DropTableParser.cpp  DropTableParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/InsertParser/: InsertParser.cpp  InsertParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/LogicalOperationParser/: LogicalOperationParser.cpp  LogicalOperationParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/SelectParser/: SelectParser.cpp  SelectParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/UpdateParser/: UpdateParser.cpp  UpdateParser.hpp
src/Compiler/SyntaxAnalyzer/Parsers/Utils/: UtilsParser.cpp  UtilsParser.hpp
src/Error/: error.cpp  error.hpp
src/ExecutePlan/: ExecuteEngine.cpp  ExecuteEngine.hpp
src/ExecutePlan/Processors/DatabaseProcessor/: DatabaseProcessor.cpp  DatabaseProcessor.hpp
src/ExecutePlan/Processors/TableProcessor/: TableProcessor.cpp  TableProcessor.hpp
src/ExecutePlan/Processors/TableProcessor/CreateTableProcessor/: CreateTableProcessor.cpp  CreateTableProcessor.hpp
src/Orchestrator/: RequestOrchestrator.cpp  RequestOrchestrator.hpp
src/Protocol/: ProtocolTemplate.hpp  README.md
src/Protocol/Contracts/: ProtocolTemplate.hpp
src/Protocol/Contracts/Request/: RequestProtocol.cpp  RequestProtocol.hpp
src/Protocol/Contracts/Response/: ResponseProtocol.cpp  ResponseProtocol.hpp
src/Protocol/Request/: RequestProtocol.cpp  RequestProtocol.hpp
src/Protocol/Serialization/: RequestProtocolDeserializer.cpp  RequestProtocolDeserializer.hpp
src/Protocol/Serialization/Builders/: RequestProtocolBuilder.cpp  RequestProtocolBuilder.hpp
src/Socket/: socket.cpp  socket.hpp
src/StorageEngine/: DataAccess.cpp  DataAccess.hpp
src/StorageEngine/BPlusTree/: BPlusTree.cpp  BPlusTree.hpp
src/StorageEngine/BPlusTree/InnerNode/: BPlusTreeInnerNode.cpp  BPlusTreeInnerNode.hpp
src/StorageEngine/BPlusTree/Key/: BPlusTreeKey.cpp  BPlusTreeKey.hpp
src/StorageEngine/BPlusTree/LeafNode/: BPlusTreeLeafNode.cpp  BPlusTreeLeafNode.hpp
src/StorageEngine/BTree/: BTree.cpp  BTree.hpp
src/StorageEngine/BTree/Key/: BTreeKey.cpp  BTreeKey.hpp
src/StorageEngine/Contracts/Database/: DatabaseDefinition.cpp  DatabaseDefinition.hpp
src/StorageEngine/Contracts/Pages/: BlockFreeSpacePage.hpp  DataPage.hpp  MappingPage.hpp  PageFreeSpacePage.hpp  TableMappingPage.hpp
src/StorageEngine/Contracts/Pages/DataPage/: DataPage.cpp  DataPage.hpp
src/StorageEngine/Contracts/Pages/MappingPage/: MappingPage.cpp  MappingPage.hpp
src/StorageEngine/Contracts/Pages/PageFreeSpacePage/: PageFreeSpacePage.cpp  PageFreeSpacePage.hpp
src/StorageEngine/Contracts/Pages/TableMappingPage/: TableMappingPage.cpp  TableMappingPage.hpp
src/StorageEngine/FileReader/Database/: DatabaseFileReader.cpp  DatabaseFileReader.hpp
src/StorageEngine/FileReader/Database/Header/: DatabaseHeaderFileReader.cpp
src/StorageEngine/FileReader/Pages/MappingPage/: MappingFileReader.cpp  MappingFileReader.hpp
src/StorageEngine/FileReader/Pages/MappingPage/Header/: MappingHeaderFileReader.cpp  MappingHeaderFileReader.hpp
src/StorageEngine/FileReaders/Database/: DatabaseFileReader.cpp  DatabaseFileReader.hpp
src/StorageEngine/FileReaders/Database/Header/: DatabaseHeaderFileReader.cpp  DatabaseHeaderFileReader.hpp
src/StorageEngine/FileReaders/Pages/MappingPage/: MappingFileReader.cpp  MappingFileReader.hpp
src/StorageEngine/FileReaders/Pages/MappingPage/Header/: MappingHeaderFileReader.cpp  MappingHeaderFileReader.hpp
src/StorageEngine/FileReaders/Pages/PageSpaceFreePage/: PageFreeSpaceFileReader.cpp  PageFreeSpaceFileReader.hpp
src/StorageEngine/FileReaders/Pages/PageSpaceFreePage/Header/: PageFreeSpaceHeaderFileReader.cpp  PageFreeSpaceHeaderFileReader.hpp
src/StorageEngine/FileWriters/Database/: DatabaseFileWriter.cpp  DatabaseFileWriter.hpp
src/StorageEngine/FileWriters/Database/Header/: DatabaseHeaderFileWriter.cpp  DatabaseHeaderFileWriter.hpp
src/StorageEngine/FileWriters/Pages/MappingPage/: MappingFileWriter.cpp  MappingFileWriter.hpp
src/StorageEngine/FileWriters/Pages/PageFreeSpacePage/: PageFreeSpaceFileWriter.cpp  PageFreeSpaceFileWriter.hpp
src/StorageEngine/FileWriters/Pages/TableMappingPage/: TableMappingFileWriter.cpp  TableMappingFileWriter.hpp
src/StorageEngine/Repositories/DatabaseRepository/: DatabaseRepository.cpp  DatabaseRepository.hpp
src/TcpServer/Socket/: socket.cpp  socket.hpp
src/TcpServer/Socket/Connections/: connection.cpp  connection.hpp
